# Descend

./: .gitignore  CMakeLists.txt  LICENSE  README.md  example.dsc  example.html
Docs/: example.html  example.js
src/: descend.cpp  lexer.cpp  lexer.hpp  token.cpp  token.hpp
tests/: lexer_test.dsc
